Change Element to interface